# kde

hotkey/: shuohuan.hotkeys  shuohuan2.khotkeys  vsdmars.khotkeys
theme/: Blur-Glassy.colorscheme  BlurGlassy.colors
widget/virtual_hdd_led-0.5/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  README  plasma-applet-virtual_hdd_led.desktop  virtual_hdd_led.cpp  virtual_hdd_led.h  virtual_hdd_led.kdev4  virtual_hdd_ledConfig.ui
widget/virtual_hdd_led-0.5/.kdev4/: virtual_hdd_led.kdev4
widget/virtual_hdd_led-0.5/icons/: hisc-device-virtual_hdd_led-read.svgz  hisc-device-virtual_hdd_led-readwrite.svgz  hisc-device-virtual_hdd_led-unknown.svgz  hisc-device-virtual_hdd_led-write.svgz
